force-app/main/default/objects/Student__c/Student__c.object-meta.xml
<CustomObject>
    <label>Student</label>
    <nameField>
        <displayFormat>STU-{0000000}</displayFormat>
        <label>Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Students</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>