force-app/main/default/objects/Student__c/fields/State_Of_Origin__c.field-meta.xml
<CustomField>
    <fullName>State_Of_Origin__c</fullName>
    <label>State Of Origin</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abia</fullName>
            </value>
            <value>
                <fullName>Adamawa</fullName>
            </value>
            <value>
                <fullName>Akwa Ibom</fullName>
            </value>
            <value>
                <fullName>Anambra</fullName>
            </value>
            <value>
                <fullName>Bauchi</fullName>
            </value>
            <value>
                <fullName>Bayelsa</fullName>
            </value>
            <value>
                <fullName>Benue</fullName>
            </value>
            <value>
                <fullName>Borno</fullName>
            </value>
            <value>
                <fullName>Cross River</fullName>
            </value>
            <value>
                <fullName>Delta</fullName>
            </value>
            <value>
                <fullName>Ebonyi</fullName>
            </value>
            <value>
                <fullName>Edo</fullName>
            </value>
            <value>
                <fullName>Ekiti</fullName>
            </value>
            <value>
                <fullName>Enugu</fullName>
            </value>
            <value>
                <fullName>FCT</fullName>
            </value>
            <value>
                <fullName>Gombe</fullName>
            </value>
            <value>
                <fullName>Imo</fullName>
            </value>
            <value>
                <fullName>Jigawa</fullName>
            </value>
            <value>
                <fullName>Kaduna</fullName>
            </value>
            <value>
                <fullName>Kano</fullName>
            </value>
            <value>
                <fullName>Katsina</fullName>
            </value>
            <value>
                <fullName>Kebbi</fullName>
            </value>
            <value>
                <fullName>Kogi</fullName>
            </value>
            <value>
                <fullName>Kwara</fullName>
            </value>
            <value>
                <fullName>Lagos</fullName>
            </value>
            <value>
                <fullName>Nassarawa</fullName>
            </value>
            <value>
                <fullName>Niger</fullName>
            </value>
            <value>
                <fullName>Ogun</fullName>
            </value>
            <value>
                <fullName>Ondo</fullName>
            </value>
            <value>
                <fullName>Osun</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>